# iosys-generative

./: .gitignore  01 IOSYS-ITEMBANK-AI-001.md  02 IOSYS-ITEMBANK-AI-001-T01.md  05  IOSYS-ITEMBANK-AI-001-R02.md  06 IOSYS-ITEMBANK-AI-001-POC-Qwen3-VL-Embedding.md  CLAUDE.md  INFO.md  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
data/: DATA-DISTRIBUTION-REPORT.md
poc/: .gitignore  (+5 more)
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/: .env.example  README.md  pyproject.toml  tech.md
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/.serena/: project.yml
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/docs/planning/: POC-PLAN-001.md
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/scripts/: extract_exam_images.py  extract_with_fitz.py  generate_comparison_report.py  generate_exam_report.py  generate_report.py  generate_samples.py  generate_samples_v2.py  run_poc.py  test_exam_generation.py  test_full_pipeline.py  test_graph_item.py  test_integration.py  test_nano_banana.py  test_subject_samples.py  test_v3_pipeline.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/: __init__.py  cli.py  pipeline.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/agents/: __init__.py  item_generator.py  nano_banana_client.py  vision_client.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/core/: __init__.py  config.py  schemas.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/integrations/: __init__.py  curriculum_parser.py  pdf_extractor.py  textbook_mapper.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/parsers/: __init__.py  qti_parser.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/processors/: __init__.py  p1_input.py  p5_output.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/utils/: __init__.py  image_utils.py  json_utils.py  logger.py  metadata_normalizer.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/src/validators/: __init__.py  calc_validator.py  consistency_validator.py  cross_validator.py  fact_validator.py  quality_checker.py  safety_validator.py
pocs/gemini-ai-vision-demo/pocs/gemini-vision-item-gen/tests/: __init__.py  test_image_utils.py  test_json_utils.py  test_metadata_normalizer.py  test_p1_processor.py  test_qti_parser.py  test_quality_checker.py  test_schemas.py
pocs/gemini-ai-vision-demo/pocs/iml-preprocessor/: .env.example  README.md  pyproject.toml  setup.cfg  setup.py
pocs/gemini-ai-vision-demo/pocs/iml-preprocessor/scripts/: run_sampling.py
pocs/gemini-ai-vision-demo/pocs/iml-preprocessor/src/: __init__.py  cli.py
pocs/gemini-ai-vision-demo/pocs/iml-preprocessor/tests/: __init__.py  test_iml_parser.py  test_sampler.py
(+248 files in other folders)
