[metadata]
name = iml-preprocessor
version = 0.1.0
description = IML 문항 데이터 전처리 및 샘플링 도구
author = IOSYS
author_email = dev@iosys.kr

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    pydantic>=2.0.0
    pydantic-settings>=2.0.0
    typer>=0.12.0
    rich>=13.0.0
    pillow>=10.0.0
    tqdm>=4.67.0

[options.packages.find]
where = .
include = src*

[options.entry_points]
console_scripts =
    iml-preprocess = src.cli:app

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-cov>=4.0.0
